src/objects/StudentTaskAttempt__c.object
<CustomObject>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Picklist field that allows users to select the appropriate vendor for a WGU assessment.</description>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Action Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHIMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Exams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certiport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CompTia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CWSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExcelSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kryterion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Praxis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prometric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMEI CSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Microsystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TaskStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VoucherCode__c</fullName>
        <description>The Voucher Code Associated with a vendor assessment</description>
        <inlineHelpText>The Voucher Code Associated with a vendor assessment</inlineHelpText>
        <label>Voucher Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherDate__c</fullName>
        <description>The date the voucher was issued</description>
        <inlineHelpText>The date the voucher was issued</inlineHelpText>
        <label>Voucher Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WGURequirement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Meets WGU Grad Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>term_ends__c</fullName>
        <formula>Student__r.TermEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>term ends</label>
        <type>Date</type>
    </fields>
    <label>Student Task Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScheduleDate__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>ContactStatus__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Assessment__c</columns>
        <columns>AttemptNumber__c</columns>
        <columns>ReferralType__c</columns>
        <columns>ReferralNotes__c</columns>
        <columns>ScoresAssessmentCode__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2013 12:00 AM</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>OnlineProctoringScheduling</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VendorAssessments</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CUC1</fullName>
        <columns>NAME</columns>
        <columns>ProctorSite1__c</columns>
        <columns>AttemptNumber__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>ContactStatus__c</columns>
        <columns>Student__c</columns>
        <columns>StudentID__c</columns>
        <columns>ReferralType__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assessment__c</field>
            <operation>contains</operation>
            <value>gpc1</value>
        </filters>
        <filters>
            <field>ScheduleDate__c</field>
            <operation>greaterThan</operation>
            <value>2/20/2014 12:00 AM</value>
        </filters>
        <label>GPC1</label>
        <sharedTo>
            <group>AssessmentSchedulingAdmin</group>
            <roleAndSubordinates>AssessmentScheduler</roleAndSubordinates>
            <roleAndSubordinates>VendorAssessments</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Certiport_Payments</fullName>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>Student__c</columns>
        <columns>ScoresAssessmentCode__c</columns>
        <columns>ScheduleDate__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>ReferralNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReferralType__c</field>
            <operation>equals</operation>
            <value>CERTIPORT</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/2/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>OTV voucher sent</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>sadmi</value>
        </filters>
        <label>Certiport Payments</label>
        <sharedTo>
            <roleAndSubordinates>AssessmentScheduler</roleAndSubordinates>
            <roleAndSubordinates>VendorAssessments</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Liz_Workorders_scheduling</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Assessment__c</columns>
        <columns>StudentID__c</columns>
        <columns>Student__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>ContactStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>term_ends__c</columns>
        <columns>ScheduleDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>In Progress,New Reviewed</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>On Hold,Pink Sheet Sent</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>Pending 5th+ attempt approval,Ready to Process</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>Received referral,Reschedule in Progress</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>Schedule in Progress,Tech Issues During Assessment</value>
        </filters>
        <label>My Open</label>
        <sharedTo>
            <roleAndSubordinates>AssessmentScheduler</roleAndSubordinates>
            <roleAndSubordinates>VendorAssessments</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Locals</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>StudentID__c</columns>
        <columns>Assessment__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>Duration__c</columns>
        <columns>AttemptNumber__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProctorSite1__c</field>
            <operation>contains</operation>
            <value>Governors</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>notEqual</operation>
            <value>,Local student confirmed,OLP appointment confirmed</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>notEqual</operation>
            <value>Scheduled in Banner,WA Confirmed in WA</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>notEqual</operation>
            <value>Work Order complete</value>
        </filters>
        <label>Locals</label>
        <sharedTo>
            <roleAndSubordinates>AssessmentScheduler</roleAndSubordinates>
            <roleAndSubordinates>VendorAssessments</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OLPReferrals</fullName>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>Assessment__c</columns>
        <columns>ReferralNotes__c</columns>
        <columns>ScheduleDate1__c</columns>
        <columns>ScheduleOption1__c</columns>
        <columns>ScheduleDate2__c</columns>
        <columns>ScheduleOption2__c</columns>
        <columns>ScheduleDate3__c</columns>
        <columns>ScheduleOption3__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ReferralStatus__c</columns>
        <columns>AttemptNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentTaskAttempt__c.OLPAssessment</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/14/2014 12:00 AM</value>
        </filters>
        <label>OLP Referrals - New</label>
        <sharedTo>
            <group>AssessmentSchedulingAdmin</group>
            <roleAndSubordinates>AssessmentScheduler</roleAndSubordinates>
            <roleAndSubordinates>OnlineProctoringScheduling</roleAndSubordinates>
            <roleAndSubordinates>StudentSupportAgent</roleAndSubordinates>
            <roleAndSubordinates>VendorAssessments</roleAndSubordinates>
            <roleAndSubordinatesInternal>AssessmentScheduler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>OnlineProctoringScheduling</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>StudentServicesAssociate</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>StudentSupportAgent</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>StudentSupportSupervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VendorAssessments</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SiteReferrals</fullName>
        <columns>NAME</columns>
        <columns>ReferralStatus__c</columns>
        <columns>ContactStatus__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>term_ends__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>contains</operation>
            <value>Progress</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>notContain</operation>
            <value>student</value>
        </filters>
        <filters>
            <field>AssessmentInstructions__c</field>
            <operation>lessOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentTaskAttempt__c.SiteAssessment</value>
        </filters>
        <label>Site Referrals - In Progress</label>
        <sharedTo>
            <roleAndSubordinates>AssessmentScheduler</roleAndSubordinates>
            <roleAndSubordinates>VendorAssessments</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Site_Assessments</fullName>
        <columns>NAME</columns>
        <columns>ScheduledTimesMismatch__c</columns>
        <columns>StudentID__c</columns>
        <columns>Student__c</columns>
        <columns>ProctorSite1__c</columns>
        <columns>ProctorSite2__c</columns>
        <columns>ProctorSite3__c</columns>
        <columns>Assessment__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AttemptNumber__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ScheduleDate1__c</columns>
        <columns>TextScheduledTime1__c</columns>
        <columns>ContactStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentTaskAttempt__c.SiteAssessment</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/2/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>System</value>
        </filters>
        <filters>
            <field>ProctorSite1__c</field>
            <operation>notContain</operation>
            <value>Governors</value>
        </filters>
        <label>Site Referrals- News Only</label>
        <sharedTo>
            <roleAndSubordinates>AssessmentScheduler</roleAndSubordinates>
            <roleAndSubordinates>VendorAssessments</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Site_Assessmentsreviewed</fullName>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>Student__c</columns>
        <columns>ProctorSite1__c</columns>
        <columns>ProctorSite2__c</columns>
        <columns>ProctorSite3__c</columns>
        <columns>Assessment__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AttemptNumber__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ScheduleDate1__c</columns>
        <columns>TextScheduledTime1__c</columns>
        <columns>ContactStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>StudentTaskAttempt__c.Hybrid,StudentTaskAttempt__c.VendorAssessment</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>New Reviewed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/2/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>System</value>
        </filters>
        <filters>
            <field>AssessmentInstructions__c</field>
            <operation>lessThan</operation>
            <value>1</value>
        </filters>
        <label>Site Referrals- News Reviewed</label>
        <sharedTo>
            <roleAndSubordinates>AssessmentScheduler</roleAndSubordinates>
            <roleAndSubordinates>VendorAssessments</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VendorReferralsallother</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) OR (5 AND 3 AND 6 AND 7) OR (8 AND 9 AND 10)</booleanFilter>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>Student__c</columns>
        <columns>Assessment__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>ContactStatus__c</columns>
        <columns>AttemptNumber__c</columns>
        <columns>ReferralType__c</columns>
        <columns>ScheduleDate1__c</columns>
        <columns>ReferralNotes__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentTaskAttempt__c.VendorAssessment</value>
        </filters>
        <filters>
            <field>ReferralType__c</field>
            <operation>equals</operation>
            <value>GIAC,Hybrid,AHIMA,HRCI,SMEI,CERTIPORT</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>notEqual</operation>
            <value>Scheduled in Banner,Work Order complete</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>sadmi</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>notEqual</operation>
            <value>OTV voucher sent,On Hold</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ebabcoc</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>notEqual</operation>
            <value>OLP appointment confirmed,WA Confirmed in WA</value>
        </filters>
        <filters>
            <field>ReferralType__c</field>
            <operation>contains</operation>
            <value>PEARSON,PROVUE,PROMETRIC,PRAXIS</value>
        </filters>
        <filters>
            <field>AttemptNumber__c</field>
            <operation>greaterOrEqual</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>3rd Party - All other</label>
        <sharedTo>
            <group>AssessmentSchedulingAdmin</group>
            <roleAndSubordinatesInternal>AssessmentScheduler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VendorAssessments</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VendorReferralsvouchers</fullName>
        <columns>NAME</columns>
        <columns>StudentLastName__c</columns>
        <columns>Assessment__c</columns>
        <columns>StudentID__c</columns>
        <columns>StudentFirstName__c</columns>
        <columns>AttemptNumber__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ReferralType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentTaskAttempt__c.VendorAssessment</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/3/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>ReferralType__c</field>
            <operation>contains</operation>
            <value>Praxis,Prometric,Pearson,Provue,SHRM</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>New,New Reviewed</value>
        </filters>
        <label>3rd Party - New Vouchers</label>
        <sharedTo>
            <group>AssessmentSchedulingAdmin</group>
            <roleAndSubordinates>ITHelpDesk</roleAndSubordinates>
            <roleAndSubordinatesInternal>AssessmentScheduler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VendorAssessments</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VendorReferralsvoucherscertiport</fullName>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>StudentFirstName__c</columns>
        <columns>StudentLastName__c</columns>
        <columns>AttemptNumber__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>Assessment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ReferralType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentTaskAttempt__c.VendorAssessment</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/3/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>ReferralType__c</field>
            <operation>equals</operation>
            <value>CERTIPORT</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>Scheduled in Banner,New Reviewed</value>
        </filters>
        <label>3rd Party - New Vouchers Certiport</label>
        <sharedTo>
            <group>AssessmentSchedulingAdmin</group>
            <roleAndSubordinates>ITHelpDesk</roleAndSubordinates>
            <roleAndSubordinatesInternal>AssessmentScheduler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VendorAssessments</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X3rd_Party_All_other_done</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) OR (4 AND 5 AND 6) OR (7 AND 8 AND 9)</booleanFilter>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>Student__c</columns>
        <columns>Assessment__c</columns>
        <columns>ReferralStatus__c</columns>
        <columns>ContactStatus__c</columns>
        <columns>AttemptNumber__c</columns>
        <columns>ReferralType__c</columns>
        <columns>ScheduleDate1__c</columns>
        <columns>ReferralNotes__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentTaskAttempt__c.VendorAssessment</value>
        </filters>
        <filters>
            <field>ReferralType__c</field>
            <operation>equals</operation>
            <value>GIAC,Hybrid,AHIMA,HRCI,SMEI,CERTIPORT</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>sadmi</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>notEqual</operation>
            <value>OTV voucher sent,On Hold</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ebabcoc</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>notEqual</operation>
            <value>OLP appointment confirmed,WA Confirmed in WA</value>
        </filters>
        <filters>
            <field>ReferralType__c</field>
            <operation>contains</operation>
            <value>PEARSON,PROVUE,PROMETRIC,PRAXIS</value>
        </filters>
        <filters>
            <field>AttemptNumber__c</field>
            <operation>greaterOrEqual</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>ReferralStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>3rd Party - All other - done</label>
        <sharedTo>
            <group>AssessmentSchedulingAdmin</group>
            <roleAndSubordinatesInternal>AssessmentScheduler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VendorAssessments</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Task Attempts</pluralLabel>
    <recordTypes>
        <fullName>Hybrid</fullName>
        <active>true</active>
        <description>Hybrid between a WGU administer assessment and a vendor provided.</description>
        <label>Hybrid</label>
    </recordTypes>
    <recordTypes>
        <fullName>OLPAssessment</fullName>
        <active>true</active>
        <description>Online Proctoring Assessment</description>
        <label>OLP Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Score</fullName>
        <active>true</active>
        <label>Score</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiteAssessment</fullName>
        <active>true</active>
        <description>An Assessment that happens at a sign</description>
        <label>Site Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>VendorAssessment</fullName>
        <active>true</active>
        <description>Assessments offered by a company outside of WGU (ie oracle cert)</description>
        <label>Vendor Assessment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ReferralStatusMustBeInProgress</fullName>
        <active>true</active>
        <description>When the Contact Status field is changed, the Referral Status value must be In Progress.</description>
        <errorConditionFormula>AND( 
ISCHANGED (ContactStatus__c), 
NOT(ISPICKVAL (ReferralStatus__c, &quot;Schedule in Progress&quot;)), 
NOT(ISPICKVAL (ReferralStatus__c, &quot;In Progress&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>ReferralStatus__c</errorDisplayField>
        <errorMessage>Please update the Referral Status to Scheduling In Progress.</errorMessage>
    </validationRules>
</CustomObject>